@@ -29,6 +29,8 @@ def addDirectoryItem(parameters, li):
         listitem=li, isFolder=True)
 
 def addLinkItem(parameters, li):
+    li.setProperty('IsPlayable', 'true')
+    li.setInfo('video', {})
     url = sys.argv[0] + '?' + urllib.urlencode(parameters)
     return xbmcplugin.addDirectoryItem(handle=handle, url=url, 
         listitem=li, isFolder=False)
@@ -51,7 +53,6 @@ def show_video_files(pageUrl):
     
     for item in items:
         liStyle=xbmcgui.ListItem(item["title"], thumbnailImage=item["thumb"])
-        liStyle.setProperty('IsPlayable', 'true')
         addLinkItem({"mode": "play", "url": item["pageUrl"]}, liStyle)
     xbmcplugin.endOfDirectory(handle=handle, succeeded=True)
 
